<resources>
    <string name="app_name">Yet Another Sudoku</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_guard_against_bad">Protect Me Against Bad moves</string>
    <string name="action_allow_bad">Don\'t Protect Me Against Bad Moves</string>
    <string name="get_hint">Get Hint</string>
    <string name="looking_for_hint">Looking for a valid move&#8230;</string>
    <string name="no_hint_found">No valid move, which will result in a winning board, was found after several attempts. Maybe you made a mistake earlier. Try using the Undo button to back up and try again.</string>
    <string name="start_game_first">Start a new game before asking for a hint!</string>

    <string name="preparing_board">Preparing Board&#8230;</string>
    <string name="failed_to_build_board">Failed to create a board. Try again?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="new_game">New</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear_cell">Clear Cell</string>
    <string name="mark_as_pivot">Mark Cell As Pivot Point</string>
    <string name="clear_mark">Clear Mark On Cell</string>
    <string name="save_notes">Save Notes</string>
    <string name="clear_notes">Clear Notes</string>

    <string name="bad_move_warning">That selection either causes another cell to not have any valid entries available or is already set on another relevant cell. Please try a different number.</string>

    <string name="regular_education">With a regular press you can set the number that you want to assign to this cell.\n\nUse a long press to note possible values for the cell and/or mark this cell as a pivot point.</string>
    <string name="long_education">With a long press you can make note of possible values that might be valid for this cell, or clear those notes later. You can also mark this cell as a pivot point so you can remember where you want to test multiple possible values.\n\nUse a regular press to assign a value to the cell.</string>
    <string name="dont_show_again">Don\'t Show Again</string>

    <string name="clock_default">00:00</string>

    <string name="none"></string>

    <string name="general_error">There was an unknown error. Please try again.</string>

    <string name="choose_difficulty_level">Choose Difficulty Level.</string>

    <string name="nothing_to_undo">There are no moves to undo.</string>
    <string name="start_game_before_undo">Please start a new game and make a move before trying to undo.</string>
</resources>
